# kloch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  THIRD-PARTY.md  TODO.md  demo.sh  pyproject.toml
.github/workflows/: doc.yml  pypi-test.yml  pypi.yml  test.yml
doc/: build-doc.py  serve-doc.py
doc/source/: cli.rst  conf.py  config.rst  demo-profile-beta.yml  demo-profile-merged.yml  demo-profile.yml  developer.rst  exec-launchers-doc.py  exec-managers-doc.py  exec-public-api.py  file-format.rst  index.rst  install.rst  launcher-plugins.rst  launchers.rst  public-api.rst  usage.rst
doc/source/_extensions/: execinject.py
doc/source/_injected/: exec-config-autodoc.py  exec-config-envvar.py  exec-config-yaml.py  exec-fileformat-token-append.py  exec-fileformat-token-context.py  exec-launchers-doc.py  exec-public-api.py  snip-launcher-plugin-basic.py  tokens.rst
doc/source/_injected/demo-fileformat/: exec-merge.py  profile-beta.yml  profile.yml
doc/source/_injected/demo-usage-.base/: exec-merge.py  profile-a.yml  profile-b.yml
doc/source/_injected/demo-usage-basics/: exec-list.py  profile.yml
doc/source/_injected/demo-usage-standard/: exec-merge.py  profile-a.yml  profile-b.yml
doc/source/_injected/demo-usage-tokens/: exec-merge.py  profile-a.yml  profile-b.yml  profile-c.yml
doc/source/_static/: extra.css
doc/source/demo-a/: merge.py
doc/source/demo-fileformat/: exec-merge.py  profile-beta.yml  profile.yml
doc/source/demo-usage-basics/: exec-list.py  profile.yml
doc/source/demo-usage-standard/: exec-merge.py  profile-a.yml  profile-b.yml
doc/source/extensions/: execinject.py
doc/source/public-api/: cli.rst  config.rst  constants.rst  index.rst  io.rst  launchers.rst  profile.rst  session.rst  utils.rst
kenvmanager/: __init__.py  __main__.py  cli.py
kenvmanager/filesyntax/: __init__.py  _io.py  _merging.py  _profile.py
kenvmanager/launchers/: _base.py  _system.py
kenvmanager/managers/: __init__.py  _base.py  _rezenv.py  _system.py  rezenv.py
kloch/: __init__.py  __main__.py  _dictmerge.py  _utils.py  cli.py  config.py  constants.py  session.py
kloch/filesyntax/: __init__.py  _doc.py  _io.py  _profile.py
kloch/launchers/: __init__.py  _base.py  _context.py  _get.py  _plugins.py  _python.py  _rezenv.py  _serialized.py  _system.py
kloch/launchers/base/: __init__.py  _dataclass.py  _serialized.py
kloch/launchers/python/: __init__.py  _dataclass.py  _serialized.py
kloch/launchers/rezenv/: __init__.py  _dataclass.py  _serialized.py
kloch/launchers/system/: __init__.py  _dataclass.py  _serialized.py
scripts/: app-build-nuitka.py  app-build.py
tests/: conftest.py  pytest.ini  test_cli.py  test_config.py  test_constants.py  test_dictmerge.py  test_e2e.py  test_filesyntax.py  test_filesyntax_io.py  test_launchers.py  test_launchers_base.py  test_launchers_context.py  test_launchers_get.py  test_launchers_plugins.py  test_launchers_python.py  test_launchers_rezenv.py  test_launchers_serialized.py  test_main.py  test_managers_rezenv.py  test_profile.py  test_session.py  test_utils.py
tests/data/: config-blaj.yml  config-fuel.yml  config-molg.yml  not-a-profile.txt  profile-delta.yml  profile-old-version.yml  profile.echoes-beta.yml  profile.echoes-tmp.yml  profile.echoes.yml  profile.knots.yml  profile.lxm.yml  profile.mult-launchers.yml  profile.nolauncher.yml  profile.priorities-fail.yml  profile.priorities-success.yml  profile.system-expand.yml  profile.system-test-asstr.yml  profile.system-test.yml  test-script-a.py
tests/data/e2e-1/: config.yml  profile.prod.yml  profile.prodml.yml  profile.studio.yml
tests/data/plugins-behr/kloch_behr/: __init__.py
tests/data/plugins-rerr/: kloch_rerr.py
tests/data/plugins-tyfa/: kloch_tyfa.py
